clean spec file, tweak tar command
git-svn-id: file:///srv/svn/publican/trunk@56 322d0b13-9966-4b26-b068-8724d74359d3

--- a/documentation-devel/Makefile
+++ b/documentation-devel/Makefile
@@ -37,7 +37,7 @@ dist: clean
 	@find $(TAR_NAME) -name "*.swp" | xargs rm -rf
 	@find $(TAR_NAME) -name "*.mo" | xargs rm -rf
 	@find $(TAR_NAME) -name "*~" | xargs rm -rf
-	@tar czf $(TAR_NAME).tgz $(TAR_NAME)
+	@tar --atime-preserve -czf $(TAR_NAME).tgz $(TAR_NAME)
 	@echo "End $@"
 
 
