--- a/publican/publican.desktop
+++ b/publican/publican.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=Publican
 Comment=How to use Publican
-Exec=htmlview FILE
-Icon=ICON
+Exec=htmlview @@FILE@@
+Icon=@@ICON@@
 Categories=Documentation;Publishing;X-Red-Hat-Base;
 Type=Application
 Encoding=UTF-8
