desktop file fixes
git-svn-id: file:///srv/svn/publican/trunk@106 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.desktop
+++ b/publican/publican.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Publican
 Comment=How to use Publican
-Exec=htmlview @@FILE@@
+Exec=xdg-open @@FILE@@
 Icon=@@ICON@@
 Categories=Documentation;Publishing;X-Red-Hat-Base;
 Type=Application
